ParsedRuleImpl: Use VarHandles